2004-11-22 Daniel Berlin  <dberlin@dberlin.org>

        * tree-ssa.c (verify_ssa): SSA_OP_ALL_USES should be
	SSA_OP_ALL_USES | SSA_OP_ALL_KILLS for verification purposes.

2004-11-22  David Edelsohn  <edelsohn@gnu.org>
	    Fariborz Jahanian  <fjahanian@apple.com>

	* config/rs6000/rs6000.c (rs6000_return_in_memory): Test
	TARGET_ALTIVEC_ABI.
	(function_arg_boundary): Align 8 to 16 byte vectors like SPE.
	Align 16 byte and larger vectors like Altivec.
	(function_arg_advance): Pass any 16 byte vector like Altivec vector.
	(function_arg): Same.
	(rs6000_pass_by_references): Test TARGET_ALTIVEC_ABI.

2004-11-22  Andrew Pinski  <pinskia@physics.uc.edu>

	PR tree-opt/18572
	* tree-sra.c (scalarize_init): Unshare the rhs before gimplifying
	it.

2004-11-22  Richard Henderson  <rth@redhat.com>

	* function.c (assign_parm_setup_block): Revert 11-13 change to
	forcably re-mode a (possibly BLKmode) hard register.

2004-11-22  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* config/sparc/sparc.c (mem_min_alignment): Check MEM_ALIGN.

2004-11-22  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/power4.md: Remove delay between dispatch and issue
	associated with dispatch group slots 3 and 4.
	* config/rs6000/power5.md: Same.

2004-11-21  Jeff Law  <law@redhat.com>

	* cfg.c (cached_make_edge): Use find_edge rather than an inlined
	variant.
	* cfgbuild.c (make_edges): Likewise.
	* cfghooks.c (can_duplicate_block_p): Likewise.
	* cfgloop.c (loop_latch_edge): Likewise.
	* cfgloopmanip.c (force_single_succ_latches): Likewise.
	* cfgrtl.c (rtl_flow_call_edges_add): Likewise.
	* predict.c (predict_loops, propagate_freq): Likewise.
	* tracer.c (tail_duplicate): Likewise.
	* tree-cfg.c (disband_implicit_edges): Likewise.
	(tree_forwarder_block_p, tree_flow_call_edges_add): Likewise.

2004-11-22  Nick Clifton  <nickc@redhat.com>

	* sbitmap.c (sbitmap_union_of_preds): Remove redundant
	initialisation of 'e'.

2004-11-22  Kazu Hirata  <kazu@cs.umass.edu>

	PR rtl-optimization/18599